[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmfd_loftr"
version = "0.1.0"
description = "Copy-move forgery detection using LoFTR self-matching."
authors = [
    {name = "Your Name"}
]
dependencies = [
    "torch>=2.2",
    "kornia>=0.7.0",
    "opencv-python",
    "scikit-learn",
    "tqdm",
    "pillow",
    "rich"
]
requires-python = ">=3.8" 